# jayson

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
derive/: Cargo.toml
derive/src/: attribute_parser.rs  de.rs  derive_enum.rs  derive_struct.rs  lib.rs  parse_type.rs
src/: careful.rs  error.rs  export.rs  ignore.rs  impls.rs  lib.rs  place.rs  serde_json.rs
src/de/: impls.rs  mod.rs
src/json/: de.rs  mod.rs  object.rs  value.rs
tests/: test_derive.rs
tests/crate/: Cargo.toml  test.rs
tests/regression/: issue24.rs  issue9.rs
tests/ui/: attr-duplicate.rs  attr-unsupported.rs  de-enum-data.rs  de-enum-data.stderr  de-enum-generic.rs  de-enum-generic.stderr  de-tuple-struct.rs  de-tuple-struct.stderr  de-union.rs  de-union.stderr  de-unit-struct.rs  de-unit-struct.stderr
