[package]
name = "jayson"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "adhoc <postma.marin@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "JSON deserarialization library with focus on custom error handling"
repository = "https://github.com/meilisearch/jayson"
readme = "README.md"
exclude = ["benches"]
edition = "2018"
rust-version = "1.36"

[dependencies]
itoa = "1.0"
jayson-internal = { version = "=0.1.0", path = "derive" }
ryu = "1.0"
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
automod = "1.0"
rustversion = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[workspace]
members = ["derive", "tests/crate"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
serde_json = ["dep:serde_json"]
std = []
